--- a/python-docker/PC2.ipynb
+++ b/python-docker/PC2.ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "connection = mysql.connector.connect(user='root', password='secret',\n",
-    "                              host='10.5.0.5',\n",
+    "                              host='mysql',\n",
     "                              database='covid')"
    ]
   },
